--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,38 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Build output
+dist/
+frontend/dist/
+backend/dist/
+
+# Env files
+.env
+.env.*  # на случай .env.production и т.д.
+frontend/.env
+backend/.env
+
+# Vite
+.vite/
+frontend/.vite/
+backend/.vite/
+
+# Local config files
 *.local
 
-# Editor directories and files
+# System files
+.DS_Store
+Thumbs.db
+
+# Editor-specific
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
