--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "form-data": "^4.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
